<resources>
    <string name="app_name">Lab1</string>
    <string name="head">中山大学学生信息系统</string>
    <string name="sid">学号：</string>
    <string name="pas">密码：</string>
    <string name="cinid">请输入学号</string>
    <string name="cinpas">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="button1">登录</string>
    <string name="button2">注册</string>
</resources>
