<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tt.lenovo.myapplication.MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/sysu"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <TextView
        android:id="@+id/sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sid"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editstd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toRightOf="@id/sid"
        android:ems="13"
        android:inputType="number"
        android:hint="@string/cinid"/>


    <TextView
        android:id="@+id/pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pas"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editstd" />

    <EditText
        android:id="@+id/editpas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editstd"
        app:layout_constraintLeft_toRightOf="@id/pas"
        android:inputType="textPassword"
        android:ems="13"
        android:hint="@string/cinpas"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editpas"
        android:layout_marginTop="20dp"
        >
    <RadioButton
        android:id="@+id/radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/student"
        android:textSize="18sp" />

    <RadioButton
        android:id="@+id/radiot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:textSize="18sp"
        android:layout_marginLeft="10dp" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/button1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/radio" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/button2"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/radio" />


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
